// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates only trait artifact when mixin has only data fields > data-only trait type interface 1`] = `
"const SimpleSchema = {
  'name': 'simple',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'title',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'author',
      'kind': 'belongsTo',
      'type': 'user',
      'options': {
        'async': true
      }
    }
  ]
};

export default SimpleSchema;

export interface SimpleTrait {
  title: string | null;
  author: Promise<User>;
}"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates trait and extension artifacts when mixin has computed properties and methods > mixin extension code 1`] = `
"import Mixin from '@ember/object/mixin';
import { attr } from '@ember-data/model';
import { computed } from '@ember/object';

export const NameableExtension = {
  displayName: computed('name', function() {
		return \`Name: \${this.name}\`;
	}),
  getName() {
		return this.name || 'Unknown';
	}
};"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates trait and extension artifacts when mixin has computed properties and methods > mixin trait type interface 1`] = `
"const NameableSchema = {
  'name': 'nameable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
};

export default NameableSchema;

export interface NameableTrait {
  name: string | null;
}"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > generates trait artifact with merged types for basic mixins > basic trait type interface 1`] = `
"const FileableSchema = {
  'name': 'fileable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file',
      'options': {
        'as': 'fileable',
        'async': false
      }
    },
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'isActive',
      'kind': 'attribute',
      'type': 'boolean',
      'options': {
        'defaultValue': false
      }
    }
  ]
};

export default FileableSchema;

export interface FileableTrait {
  files: HasMany<File>;
  name: string | null;
  isActive: boolean | null;
}"
`;

exports[`mixin-to-schema transform (artifacts) > TypeScript type artifacts > handles custom type mappings in mixin trait type interfaces > mixin custom type mappings interface 1`] = `
"const TypedSchema = {
  'name': 'typed',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'id',
      'kind': 'attribute',
      'type': 'uuid'
    },
    {
      'name': 'amount',
      'kind': 'attribute',
      'type': 'currency'
    },
    {
      'name': 'metadata',
      'kind': 'attribute',
      'type': 'json'
    }
  ]
};

export default TypedSchema;

export interface TypedTrait {
  id: string | null;
  amount: number | null;
  metadata: Record<string, unknown> | null;
}"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > collects the real fileable mixin shape into trait and extension artifacts > artifact metadata 1`] = `
[
  {
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "name": "FileableSchema",
    "suggestedFileName": "fileable.schema.js",
    "type": "trait",
  },
  {
    "name": "FileableExtension",
    "suggestedFileName": "fileable.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > collects the real fileable mixin shape into trait and extension artifacts > extension code 1`] = `
"import { computed } from '@ember/object';
import { readOnly } from '@ember/object/computed';
import Mixin from '@ember/object/mixin';

import { arrayHasLength } from '@auditboard/client-core/core/computed-extensions';
import { attr, hasMany } from '@ember-data/model';

import { sortBy } from 'soxhub-client/utils/sort-by';

export const FileableExtension = {
  sortedFiles: sortBy('files', 'createdAt:desc'),
  hasFiles: arrayHasLength('files'),
  numFiles: readOnly('files.length'),
  filesRequiringReview: computed('files.@each.status', function () {
		return this.files.filter((file) => !file.isReviewed);
	}),
  hasFilesRequiringReview: arrayHasLength('filesRequiringReview'),
  numFilesRequiringReview: readOnly('filesRequiringReview.length'),
  hasDuplicateFileName(file) {
		return Boolean(this.files.find((fileRecord) => fileRecord.name === file.name));
	}
};"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > collects the real fileable mixin shape into trait and extension artifacts > trait code 1`] = `
"const FileableSchema = {
  'name': 'fileable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file',
      'options': {
        'as': 'fileable',
        'async': false,
        'inverse': 'fileable'
      }
    },
    {
      'name': 'showFilesRequiringReviewError',
      'kind': 'attribute',
      'type': 'boolean',
      'options': {
        'defaultValue': false
      }
    }
  ]
};

export default FileableSchema;

export interface FileableTrait {
  files: HasMany<File>;
  showFilesRequiringReviewError: boolean | null;
}"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > converts mixin with no trait fields to extension artifact > code 1`] = `
"import Mixin from '@ember/object/mixin';
import { computed } from '@ember/object';

export const NotraitsExtension = {
  complexMethod() { return 'processed'; },
  computedValue: computed(function() { return 'computed'; })
};"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > converts mixin with no trait fields to extension artifact > metadata 1`] = `
[
  {
    "name": "NoTraitsSchema",
    "suggestedFileName": "no-traits.schema.js",
    "type": "trait",
  },
  {
    "name": "NotraitsExtension",
    "suggestedFileName": "no-traits.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > preserves newlines and tabs in extension artifact properties without escaping > code 1`] = `
"import Mixin from '@ember/object/mixin';
import { computed } from '@ember/object';
import { service } from '@ember/service';

export const PlannableExtension = {
  library: service('library'),
  projectPlans: computed('_modelName', 'intId', 'library.projectPlans.[]', function () {
		return this.get('library.projectPlans')
			?.filterBy('plannableType', classify(this._modelName))
			.filterBy('plannableId', this.intId);
	})
};"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > preserves newlines and tabs in extension artifact properties without escaping > metadata 1`] = `
[
  {
    "name": "PlannableSchema",
    "suggestedFileName": "plannable.schema.js",
    "type": "trait",
  },
  {
    "name": "PlannableExtension",
    "suggestedFileName": "plannable.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > produces a trait artifact if identifier default export is initialized by Mixin.create > code 1`] = `
"// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > produces a trait artifact if identifier default export is initialized by Mixin.create > metadata 1`] = `
[
  {
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "name": "FileableSchema",
    "suggestedFileName": "fileable.schema.js",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > supports alias of Mixin import and still produces a trait artifact > code 1`] = `
"const AliasedSchema = {
  'name': 'aliased',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
};

export default AliasedSchema;

export interface AliasedTrait {
  name: string | null;
}"
`;

exports[`mixin-to-schema transform (artifacts) > basic functionality > supports alias of Mixin import and still produces a trait artifact > metadata 1`] = `
[
  {
    "name": "AliasedSchema",
    "suggestedFileName": "aliased.schema.js",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > allows alternate import source via options (trait artifact) 1`] = `
[
  {
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "code": "const CustomSourceSchema = {
  'name': 'custom-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
};

export default CustomSourceSchema;

export interface CustomSourceTrait {
  name: string | null;
  files: HasMany<File>;
}",
    "name": "CustomSourceSchema",
    "suggestedFileName": "custom-source.schema.js",
    "type": "trait",
  },
  {
    "code": "import Mixin from '@ember/object/mixin';
import { attr, hasMany } from '@my-custom/model';
import { computed } from '@ember/object';

export const CustomsourceExtension = {
  customProp: computed('name', function() { return this.name; })
};",
    "name": "CustomsourceExtension",
    "suggestedFileName": "custom-source.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > correctly ignores renamed imports from unsupported sources (only hasMany recognized) 1`] = `
[
  {
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "code": "const RenamedMixedSourcesSchema = {
  'name': 'renamed-mixed-sources',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
};

export default RenamedMixedSourcesSchema;

export interface RenamedMixedSourcesTrait {
  files: HasMany<File>;
}",
    "name": "RenamedMixedSourcesSchema",
    "suggestedFileName": "renamed-mixed-sources.schema.js",
    "type": "trait",
  },
  {
    "code": "import Mixin from '@ember/object/mixin';
import { hasMany as many } from '@ember-data/model';
import { attr as attribute } from '@unsupported/source';

export const RenamedmixedsourcesExtension = {
  name: attribute('string')
};",
    "name": "RenamedmixedsourcesExtension",
    "suggestedFileName": "renamed-mixed-sources.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > handles CLI option name conversion from kebab-case to camelCase (trait artifact) 1`] = `
[
  {
    "code": "const CliOptionSchema = {
  'name': 'cli-option',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
};

export default CliOptionSchema;

export interface CliOptionTrait {
  name: string | null;
}",
    "name": "CliOptionSchema",
    "suggestedFileName": "cli-option.schema.js",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > handles aliased imports correctly (trait artifact) 1`] = `
[
  {
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "code": "// Stub interface for User - generated automatically
// This file will be replaced when the actual resource type is generated

export interface User {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "User",
    "suggestedFileName": "user.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "code": "const AliasedImportsSchema = {
  'name': 'aliased-imports',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    },
    {
      'name': 'owner',
      'kind': 'belongsTo',
      'type': 'user'
    }
  ]
};

export default AliasedImportsSchema;

export interface AliasedImportsTrait {
  name: string | null;
  files: HasMany<File>;
  owner: User | null;
}",
    "name": "AliasedImportsSchema",
    "suggestedFileName": "aliased-imports.schema.js",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > ignores decorators from unsupported import sources (only attr recognized) 1`] = `
[
  {
    "code": "const UnsupportedSourceSchema = {
  'name': 'unsupported-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
};

export default UnsupportedSourceSchema;

export interface UnsupportedSourceTrait {
  name: string | null;
}",
    "name": "UnsupportedSourceSchema",
    "suggestedFileName": "unsupported-source.schema.js",
    "type": "trait",
  },
  {
    "code": "import Mixin from '@ember/object/mixin';
import { attr } from '@ember-data/model';
import { hasMany } from '@unsupported/source';
import { computed } from '@ember/object';

export const UnsupportedsourceExtension = {
  files: hasMany('file'),
  customProp: computed('name', function() { return this.name; })
};",
    "name": "UnsupportedsourceExtension",
    "suggestedFileName": "unsupported-source.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > only processes decorators from @ember-data/model by default (trait artifact) > artifact types 1`] = `
[
  {
    "name": "File",
    "type": "resource-type-stub",
  },
  {
    "name": "DefaultSourceSchema",
    "type": "trait",
  },
  {
    "name": "DefaultsourceExtension",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > only processes decorators from @ember-data/model by default (trait artifact) > generated code 1`] = `
[
  "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
  "const DefaultSourceSchema = {
  'name': 'default-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
};

export default DefaultSourceSchema;

export interface DefaultSourceTrait {
  name: string | null;
  files: HasMany<File>;
}",
  "import Mixin from '@ember/object/mixin';
import { attr, hasMany } from '@ember-data/model';
import { computed } from '@ember/object';

export const DefaultsourceExtension = {
  customProp: computed('name', function() { return this.name; })
};",
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > processes belongsTo decorator correctly (trait artifact) 1`] = `
[
  {
    "code": "// Stub interface for User - generated automatically
// This file will be replaced when the actual resource type is generated

export interface User {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "User",
    "suggestedFileName": "user.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "code": "const BelongsToSchema = {
  'name': 'belongs-to',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'owner',
      'kind': 'belongsTo',
      'type': 'user',
      'options': {
        'async': true
      }
    }
  ]
};

export default BelongsToSchema;

export interface BelongsToTrait {
  owner: Promise<User>;
}",
    "name": "BelongsToSchema",
    "suggestedFileName": "belongs-to.schema.js",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > produces an extension artifact when no valid EmberData imports are found 1`] = `
[
  {
    "code": "const NoValidImportsSchema = {
  'name': 'no-valid-imports',
  'mode': 'legacy',
  'fields': []
};

export default NoValidImportsSchema;

export interface NoValidImportsTrait {
}",
    "name": "NoValidImportsSchema",
    "suggestedFileName": "no-valid-imports.schema.js",
    "type": "trait",
  },
  {
    "code": "import Mixin from '@ember/object/mixin';
import { computed } from '@ember/object';
import { attr } from '@unsupported/source';

export const NovalidimportsExtension = {
  name: attr('string'),
  customProp: computed('name', function() { return this.name; })
};",
    "name": "NovalidimportsExtension",
    "suggestedFileName": "no-valid-imports.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > import validation > supports @auditboard/warp-drive/v1/model as alternate import source when configured 1`] = `
[
  {
    "code": "// Stub interface for File - generated automatically
// This file will be replaced when the actual resource type is generated

export interface File {
  // Stub: properties will be populated when the actual resource type is generated
}
",
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "code": "const AuditboardSourceSchema = {
  'name': 'auditboard-source',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'name',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file'
    }
  ]
};

export default AuditboardSourceSchema;

export interface AuditboardSourceTrait {
  name: string | null;
  files: HasMany<File>;
}",
    "name": "AuditboardSourceSchema",
    "suggestedFileName": "auditboard-source.schema.js",
    "type": "trait",
  },
  {
    "code": "import Mixin from '@ember/object/mixin';
import { attr, hasMany } from '@auditboard/warp-drive/v1/model';
import { computed } from '@ember/object';

export const AuditboardsourceExtension = {
  customProp: computed('name', function() { return this.name; })
};",
    "name": "AuditboardsourceExtension",
    "suggestedFileName": "auditboard-source.ext.js",
    "type": "trait-extension",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait with extended traits when using createWithMixins > inheritance artifact metadata 1`] = `
[
  {
    "name": "File",
    "suggestedFileName": "file.schema.ts",
    "type": "resource-type-stub",
  },
  {
    "name": "FileableSchema",
    "suggestedFileName": "fileable.schema.js",
    "type": "trait",
  },
]
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait with extended traits when using createWithMixins > inheritance trait code 1`] = `
"const FileableSchema = {
  'name': 'fileable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'description',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'files',
      'kind': 'hasMany',
      'type': 'file',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'base-model',
    'timestamp'
  ]
};

export default FileableSchema;

export interface FileableTrait extends BaseModelTrait, TimestampTrait {
  description: string | null;
  files: HasMany<File>;
}"
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait with single extended trait > single inheritance trait code 1`] = `
"const DescribableSchema = {
  'name': 'describable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'description',
      'kind': 'attribute',
      'type': 'string'
    }
  ],
  'traits': [
    'base-model'
  ]
};

export default DescribableSchema;

export interface DescribableTrait extends BaseModelTrait {
  description: string | null;
}"
`;

exports[`mixin-to-schema transform (artifacts) > mixin inheritance > produces trait without traits property when no inheritance > no inheritance trait code 1`] = `
"const DescribableSchema = {
  'name': 'describable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'description',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
};

export default DescribableSchema;

export interface DescribableTrait {
  description: string | null;
}"
`;
